--- a/HTML/05.02.24 sale/main.html
+++ b/HTML/05.02.24 sale/main.html
@@ -9,13 +9,13 @@
 	<body>
 		<div class="container">
 			<header class="header">
-				<a href = "main.html" class="logo">
+				<a href="main.html" class="logo">
 					<h1 class="Ltext">Sale</h1>
 				</a>
 				<div class="nav">
-					<div class="navbutton">
+					<a href="main.html" class="navbutton">
 						<p>Главная</p>
-					</div>
+					</a>
 					<div class="navbutton">
 						<p>О нас</p>
 					</div>
@@ -40,20 +40,17 @@
 							<p>Цена</p>
 							<div class="fp_area">
 								<label for="ot">От</label>
-								<input class = class1 type="number" name="ot" min="0" />
+								<input class="class1" type="number" name="ot" min="0" />
 							</div>
 							<div class="fp_area">
 								<label for="do">До</label>
-								<input class = class1 type="number" name="do" max="1000000" />
+								<input class="class1" type="number" name="do" max="1000000" />
 							</div>
 						</div>
 						<div class="filter_company">
 							<form>
 								<label for="fcompany">Фирма</label>
-								<select
-									id="fcompany"
-									name="f_company"
-								>
+								<select id="fcompany" name="f_company">
 									<option value="Black_Shark">Black Shark</option>
 									<option value="Nubia">Nubia</option>
 									<option value="Vivo">Vivo</option>
@@ -67,14 +64,14 @@
 						</div>
 						<div class="filter_date">
 							<label for="calendar">Дата</label>
-							<input class = calendar type="date" name="calendar" />
+							<input class="calendar" type="date" name="calendar" />
 						</div>
 					</div>
 					<div class="filter_button"></div>
 				</div>
 				<div class="product">
 					<div class="product_row">
-						<a href = "product1.html" class="product_cart">
+						<a href="product1.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -91,7 +88,7 @@
 								<p>Цена 1</p>
 							</div>
 						</a>
-						<a href = "product2.html" class="product_cart">
+						<a href="product2.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -110,7 +107,7 @@
 						</a>
 					</div>
 					<div class="product_row">
-						<a href = "product3.html" class="product_cart">
+						<a href="product3.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -127,7 +124,7 @@
 								<p>Цена 3</p>
 							</div>
 						</a>
-						<a href = "product4.html" class="product_cart">
+						<a href="product4.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -146,7 +143,7 @@
 						</a>
 					</div>
 					<div class="product_row">
-						<div class="product_cart">
+						<a href="product5.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -162,8 +159,8 @@
 							<div class="product_price">
 								<p>Цена 5</p>
 							</div>
-						</div>
-						<div class="product_cart">
+						</a>
+						<a href="product6.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -179,10 +176,10 @@
 							<div class="product_price">
 								<p>Цена 6</p>
 							</div>
-						</div>
+						</a>
 					</div>
 					<div class="product_row">
-						<div class="product_cart">
+						<a href="product7.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -198,8 +195,8 @@
 							<div class="product_price">
 								<p>Цена 7</p>
 							</div>
-						</div>
-						<div class="product_cart">
+						</a>
+						<a href="product8.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -215,10 +212,10 @@
 							<div class="product_price">
 								<p>Цена 8</p>
 							</div>
-						</div>
+						</a>
 					</div>
 					<div class="product_row">
-						<div class="product_cart">
+						<a href="product9.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -234,8 +231,8 @@
 							<div class="product_price">
 								<p>Цена 9</p>
 							</div>
-						</div>
-						<div class="product_cart">
+						</a>
+						<a href="product10.html" class="product_cart">
 							<div class="product_img">
 								<img
 									width="100%"
@@ -251,7 +248,7 @@
 							<div class="product_price">
 								<p>Цена 10</p>
 							</div>
-						</div>
+						</a>
 					</div>
 				</div>
 			</main>
