--- a/HTML/Work2Variant/index.html
+++ b/HTML/Work2Variant/index.html
@@ -20,16 +20,22 @@
 					<a href="blogs.html" class="navbutton"> Блоги </a>
 					<a href="info.html" class="navbutton"> О нас </a>
 				</div>
-				<div class="search">Поиск</div>
+				<div class="search"><p class = searchtext>поиск...</p><div class = searchbutton></div></div>
 			</div>
-			<div class="cart">Корзина</div>
+			<div class="cart"></div>
+			<div class="like"></div>
 			<a href="account.html" class="login"> Войти </a>
 		</div>
 		<div class="main">
 			<div class="mainName">
-				<div class="nameCompany"></div>
-				<img src="" alt="" class="nameIMG" />
+				<div class="nameCompany">
+				<p id = nameCompany1>Мир возможностей</p>
+				<p id = nameCompany2>Перемещаясь по сложной ткани жизни, выборы раскрывают пути к необычному, требуя творчества, любопытства и смелости для настоящего насыщенного путешествия.</pid></div>
+				<img width="100%" height="100%" src="" alt="" class="nameIMG" />
 			</div>
+			<div class = "slider">				
+				<p id = swiperText1>Новые поступления</p>
+				<p id = swiperText2>Перемещаясь по сложной ткани жизни, выборы раскрывают пути к необычному, требуя творчества, любопытства и смелости для настоящего насыщенного путешествия.</p>
 			<div class="swiper">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">slide1</div>
@@ -39,6 +45,7 @@
 				</div>
 				<div class="swiper-button-prev"></div>
 				<div class="swiper-button-next"></div>
+			</div>
 			</div>
 			<div class="News">
                 Новости
