modified:   HTML/Work2Variant/index.html 	modified:   HTML/Work2Variant/styles/indexStyle.css

--- a/HTML/Work2Variant/index.html
+++ b/HTML/Work2Variant/index.html
@@ -48,26 +48,26 @@
 			</div>
 			</div>
 			<div class="News">
-                Новости
+                <p>Новости в мире искусства</p>
 				<div class="newInfo">
 					<div class="newtext">Текст новости</div>
 					<div class="newbuttons">
-						<div class="likebut">Лайк</div>
-						<div class="morebut">Больше</div>
+						<div class="likebut"></div>
+						<div class="morebut"></div>
 					</div>
 				</div>
 				<div class="newInfo">
 					<div class="newtext">Текст новости</div>
 					<div class="newbuttons">
-						<div class="likebut">Лайк</div>
-						<div class="morebut">Больше</div>
+						<div class="likebut"></div>
+						<div class="morebut"></div>
 					</div>
 				</div>
 				<div class="newInfo">
 					<div class="newtext">Текст новости</div>
 					<div class="newbuttons">
-						<div class="likebut">Лайк</div>
-						<div class="morebut">Больше</div>
+						<div class="likebut"></div>
+						<div class="morebut"></div>
 					</div>
 				</div>
 			</div>
