modified:   HTML/Work2Variant/catalog.html 	modified:   HTML/Work2Variant/index.html 	modified:   HTML/Work2Variant/styles/indexStyle.css 	modified:   HTML/Work2Variant/styles/mainStyles.css

--- a/HTML/Work2Variant/index.html
+++ b/HTML/Work2Variant/index.html
@@ -48,7 +48,7 @@
 			</div>
 			</div>
 			<div class="News">
-                <p>Новости в мире искусства</p>
+                <p style="padding-bottom: 1%;">Новости в мире искусства</p>
 				<div class="newInfo">
 					<div class="newtext">Текст новости</div>
 					<div class="newbuttons">
@@ -75,17 +75,17 @@
 				<div class="relate" id="rel1">
 					<div class="rateR">Баллы</div>
 					<div class="nicknameR">Ник</div>
-					<div class="textR">Текст</div>
+					<div class="textR">Интернет-магазин предоставил широкий выбор художественных материалов с отличным качеством и быстрой доставкой. Очень доволен!</div>
 				</div>
 				<div class="relate" id="rel2">
 					<div class="rateR">Баллы</div>
 					<div class="nicknameR">Ник</div>
-					<div class="textR">Текст</div>
+					<div class="textR">Удобный сайт, простая навигация и множество вариантов оплаты. Находил всё необходимое для своего творчества без лишних усилий. Спасибо за качественное обслуживание!</div>
 				</div>
 				<div class="relate" id="rel3">
 					<div class="rateR">Баллы</div>
 					<div class="nicknameR">Ник</div>
-					<div class="textR">Текст</div>
+					<div class="textR">Отличный сервис и оперативная поддержка клиентов. Заказывал кисти и краски - всё пришло в целости и сохранности. Рекомендую!</div>
 				</div>
 			</div>
 		</div>
