--- a/HTML/Work2Variant/catalog.html
+++ b/HTML/Work2Variant/catalog.html
@@ -8,35 +8,48 @@
     <title>Каталог</title>
 </head>
 <body>
-    <div class="header">
-        <a href="index.html" class="logo">
-            Лого
-        </a>
-        <div class="nav">
-            <div class="navbuttons">
-                <a href="catalog.html" class="navbutton">
-                    Каталог
-                </a>
-                <a href="blogs.html" class="navbutton">
-                    Блоги
-                </a>
-                <a href="info.html" class="navbutton">
-                    О нас
-                </a>
-            </div>
-            <div class="search">
-                Поиск
-            </div>
-        </div>
-        <div class="cart">
-            Корзина
-        </div>
-        <a href="account.html" class="login">
-            Войти
-        </a>
-    </div>
+		<div class="header">
+			<a href="index.html" class="logo"> Лого </a>
+			<div class="nav">
+				<div class="navbuttons">
+					<a href="catalog.html" class="navbutton"> Каталог </a>
+					<a href="blogs.html" class="navbutton"> Блоги </a>
+					<a href="info.html" class="navbutton"> О нас </a>
+				</div>
+				<div class="search"><p class = searchtext>поиск...</p><div class = searchbutton></div></div>
+			</div>
+			<div class="cart"></div>
+			<div class="like"></div>
+			<a href="account.html" class="login"> Войти </a>
+		</div>
     <div class="main">
-        
+        <div class="filters">
+
+        </div>
+        <div class="products">
+            <div class="product">
+                <div class="productIMG">
+                    Изображение
+                </div>
+                <div class="productTEXT">
+                    Текст
+                </div>
+                <div class="productPrice">
+                    Цена
+                </div>
+                <div class="productButtons">
+                    <div class="likebut">
+                        Лайк
+                    </div>
+                    <div class="cartbut">
+                        Корзина
+                    </div>
+                    <div class="buybut">
+                        Купить
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="footer">
         <div class="nameCO">
