modified:   HTML/Work2Variant/blogs.html 	modified:   HTML/Work2Variant/info.html 	modified:   HTML/Work2Variant/styles/blogsStyle.css 	modified:   HTML/Work2Variant/styles/infoStyle.css 	modified:   HTML/Work2Variant/styles/mainStyles.css

--- a/HTML/Work2Variant/blogs.html
+++ b/HTML/Work2Variant/blogs.html
@@ -26,72 +26,41 @@
 			<a href="account.html" class="login"> Войти </a>
 		</div>
 		<div class="main">
-            <div class="mainBlog">
-                <div class="mainBlog-img">
-                    Изображение
-                </div>
-                <div class="mainBlog-text">
-                    Текст
-                </div>
-                <div class="mainBlog-buttons">
-                    <div class="likeBut"></div>
-                    <div class="forwardBut">
-                        
-                    </div>
-                    <div class="commentArea">
-                        Область коммента
-                    </div>
-                    <div class="readMoreBut">
-                    </div>
-                </div>
-            </div>
-            <div class="column-newBlog">
-                <div class="newBlog">
-                    <div class="newBlog-img">
-
-                    </div>
-                    <div class="newBlog-text">
-                        Текст
-                    </div>
-                    <div class="newBlog-buttons">
-                        <div class="newLikeBut">
-
-                        </div>
-                        <div class="newForwardBut">
-
-                        </div>
-                        <div class="newCommentArea">
-
-                        </div>
-                        <div class="newReadMoreBut">
-
-                        </div>
-                    </div>
-                </div>
-                <div class="newBlog">
-                    <div class="newBlog-img">
-
-                    </div>
-                    <div class="newBlog-text">
-                        Текст
-                    </div>
-                    <div class="newBlog-buttons">
-                        <div class="newLikeBut">
-
-                        </div>
-                        <div class="newForwardBut">
-
-                        </div>
-                        <div class="newCommentArea">
-
-                        </div>
-                        <div class="newReadMoreBut">
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+			<div class="container">
+				<div class="mainBlog">
+					<div class="mainBlog-img">Изображение</div>
+					<div class="mainBlog-text">Текст</div>
+					<div class="mainBlog-buttons">
+						<div class="likeBut"></div>
+						<div class="forwardBut"></div>
+						<div class="commentArea">Область коммента</div>
+						<div class="readMoreBut"></div>
+					</div>
+				</div>
+				<div class="column-newBlog">
+					<div class="newBlog">
+						<div class="newBlog-img"></div>
+						<div class="newBlog-text">Текст</div>
+						<div class="newBlog-buttons">
+							<div class="newLikeBut"></div>
+							<div class="newForwardBut"></div>
+							<div class="newCommentArea"></div>
+							<div class="newReadMoreBut"></div>
+						</div>
+					</div>
+					<div class="newBlog">
+						<div class="newBlog-img"></div>
+						<div class="newBlog-text">Текст</div>
+						<div class="newBlog-buttons">
+							<div class="newLikeBut"></div>
+							<div class="newForwardBut"></div>
+							<div class="newCommentArea"></div>
+							<div class="newReadMoreBut"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<div class="footer">
 			<div class="nameCO">
 				<div class="name">Наименование</div>
