--- a/HTML/Work2Variant/info.html
+++ b/HTML/Work2Variant/info.html
@@ -1,71 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/mainStyles.css">
-    <link rel="stylesheet" href="./styles/infoStyle.css">
-    <title>О нас</title>
-</head>
-<body>
-    <div class="header">
-        <a href="index.html" class="logo">
-            Лого
-        </a>
-        <div class="nav">
-            <div class="navbuttons">
-                <a href="catalog.html" class="navbutton">
-                    Каталог
-                </a>
-                <a href="blogs.html" class="navbutton">
-                    Блоги
-                </a>
-                <a href="info.html" class="navbutton">
-                    О нас
-                </a>
-            </div>
-            <div class="search">
-                Поиск
-            </div>
-        </div>
-        <div class="cart">
-            Корзина
-        </div>
-        <a href="account.html" class="login">
-            Войти
-        </a>
-    </div>
-    <div class="main">
-        
-    </div>
-    <div class="footer">
-        <div class="nameCO">
-            <div class="name">
-                Наименование 
-            </div>
-            <div class="info">
-                Описание
-            </div>
-        </div>
-        <div class="navFooter">
-            <div class="navbutton">
-                Каталог
-            </div>
-            <div class="navbutton">
-                Блоги
-            </div>
-            <div class="navbutton">
-                О нас
-            </div>
-        </div>
-        <div class="contacts">
-            <div class="contact">
-                Контакты
-            </div>
-            <div class="map">
-                Карта
-            </div>
-        </div>
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./styles/mainStyles.css" />
+		<link rel="stylesheet" href="./styles/infoStyle.css" />
+		<title>О нас</title>
+	</head>
+	<body>
+		<div class="header">
+			<a href="index.html" class="logo"> Лого </a>
+			<div class="nav">
+				<div class="navbuttons">
+					<a href="catalog.html" class="navbutton"> Каталог </a>
+					<a href="blogs.html" class="navbutton"> Блоги </a>
+					<a href="info.html" class="navbutton"> О нас </a>
+				</div>
+				<div class="search">
+					<p class="searchtext">поиск...</p>
+					<div class="searchbutton"></div>
+				</div>
+			</div>
+			<div class="cart"></div>
+			<div class="like"></div>
+			<a href="account.html" class="login"> Войти </a>
+		</div>
+		<div class="main">
+			<div class="container">
+				<div class="row-name_map">
+					<div class="nameCompany">
+						<div id="nameCompany-text1">текст1</div>
+						<div id="nameCompany-text2">текст2</div>
+					</div>
+					<div class="mapCompany">карта</div>
+				</div>
+				<div class="contacts">
+					<div class="all">
+						<p>Number</p>
+						<p>Email</p>
+					</div>
+					<div class="socialSites">
+						<div class="soc"></div>
+						<div class="soc"></div>
+						<div class="soc"></div>
+						<div class="soc"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer">
+			<div class="nameCO">
+				<div class="name">Наименование</div>
+				<div class="info">Описание</div>
+			</div>
+			<div class="navFooter">
+				<div class="navbutton">Каталог</div>
+				<div class="navbutton">Блоги</div>
+				<div class="navbutton">О нас</div>
+			</div>
+			<div class="contacts">
+				<div class="contact">Контакты</div>
+				<div class="map">Карта</div>
+			</div>
+		</div>
+	</body>
 </html>
