--- a/HTML/Work2Variant/index.html
+++ b/HTML/Work2Variant/index.html
@@ -30,7 +30,7 @@
 			<div class="mainName">
 				<div class="nameCompany">
 				<p id = nameCompany1>Мир возможностей</p>
-				<p id = nameCompany2>Перемещаясь по сложной ткани жизни, выборы раскрывают пути к необычному, требуя творчества, любопытства и смелости для настоящего насыщенного путешествия.</pid></div>
+				<p id = nameCompany2>Перемещаясь по сложной ткани жизни, выборы раскрывают пути к необычному, требуя творчества, любопытства и смелости для настоящего насыщенного путешествия.</p></div>
 				<img width="100%" height="100%" src="" alt="" class="nameIMG" />
 			</div>
 			<div class = "slider">				
