--- a/HTML/Work2Variant/info.html
+++ b/HTML/Work2Variant/info.html
@@ -29,10 +29,10 @@
 			<div class="container">
 				<div class="row-name_map">
 					<div class="nameCompany">
-						<div id="nameCompany-text1">текст1</div>
-						<div id="nameCompany-text2">текст2</div>
+						<div id="nameCompany-text1">Мир возможностей</div>
+						<div id="nameCompany-text2">Перемещаясь по сложной ткани жизни, выборы раскрывают пути к необычному, требуя творчества, любопытства и смелости для настоящего насыщенного путешествия.</div>
 					</div>
-					<div class="mapCompany">карта</div>
+					<div class="mapCompany"><iframe width="100%" height="100%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1644.2666564918795!2d48.389450624836265!3d54.35089833960822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3a02350e60f1%3A0x71f41ea55fac4e37!2z0KPQu9GM0Y_QvdC-0LLRgdC60LjQuSDQs9C-0YHRg9C00LDRgNGB0YLQstC10L3QvdGL0Lkg0YLQtdGF0L3QuNGH0LXRgdC60LjQuSDRg9C90LjQstC10YDRgdC40YLQtdGCICjQo9C70JPQotCjKQ!5e0!3m2!1sru!2sru!4v1714127960771!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 				</div>
 				<div class="contacts">
 					<div class="all">
@@ -46,21 +46,6 @@
 						<div class="soc"></div>
 					</div>
 				</div>
-			</div>
-		</div>
-		<div class="footer">
-			<div class="nameCO">
-				<div class="name">Наименование</div>
-				<div class="info">Описание</div>
-			</div>
-			<div class="navFooter">
-				<div class="navbutton">Каталог</div>
-				<div class="navbutton">Блоги</div>
-				<div class="navbutton">О нас</div>
-			</div>
-			<div class="contacts">
-				<div class="contact">Контакты</div>
-				<div class="map">Карта</div>
 			</div>
 		</div>
 	</body>
